# v8App

./: .bazelrc  .gitignore  .gitmodules  .vpython  BUILD  BUILD.bazel  BUILD.gn  DEPS  LICENSE  MODULE.bazel  README.md  WORKSPACE  v8Version
bazel/: platform_configs.bzl  third_party_aliases.bzl  v8_app_rules.bzl
build_overrides/: build.gni
libs/application/: BUILD
libs/application/include/: Application.h  BasePlatform.h
libs/core/: BUILD
libs/core/include/Assets/: AppAssetRoots.h  BinaryAsset.h  TextAsset.h
libs/core/include/Logging/: ILogSink.h  Log.h  LogMacros.h
libs/core/include/Queues/: TThreadSafeDelayedQueue.hpp  TThreadSafeQueue.h
libs/core/include/Threads/: ThreadPool.h  ThreadPoolDelayedQueue.h  ThreadPoolQueue.h  ThreadPoolTasks.h  Threads.h
libs/core/include/Time/: Time.h
libs/core/include/Utils/: CallbackWrapper.h  Environment.h  VersionString.h
libs/core/src/Assets/: AppAssetRoots.cc  TextAsset.cc
libs/core/src/Logging/: Log.cc
libs/core/src/Threads/: ThreadPool.cc  ThreadPoolDelayedQueue.cc  ThreadPoolQueue.cc  Threads.cc
libs/core/src/Utils/: Paths.cc  VersionString.cc
libs/core/testLib/: TestLogSink.cc  TestLogSink.h
libs/core/tests/Assets/: AppAssetRootsTest.cc  BaseAssetTest.cc  BinaryAssetTest.cc  TextAssetTest.cc
libs/core/tests/Logging/: LogDeathTest.cc  LogTest.cc
libs/core/tests/Queues/: TThreadSafeDelayedQueueDeathTest.cc  TThreadSafeDelayedQueueTest.cc
libs/core/tests/Threads/: ThreadPoolDelayedQueueTest.cc  ThreadPoolQueueTest.cc  ThreadPoolTest.cc  ThreadsTest.cc
libs/core/tests/Utils/: CallbackWrapperDeathTest.cc  CallbackWrapperTest.cc  EnvironmentTest.cc  PathsTest.cc  VersionStringTest.cc
libs/jsRuntime/: BUILD
libs/jsRuntime/include/: CodeCache.h  DelayedWorkerTaskQueue.h  JSApp.h  JSContext.h  JSContextModules.h  JSModuleInfo.h  JSModules.h  JSRuntime.h  JSUtilites.h  NestableQueue.h  ScriptStartupDataManager.h  TaskRunner.h  V8ExternalRegistry.h  V8Jobs.h  V8Platform.h  V8Types.h
libs/jsRuntime/include/CppBridge/: V8Arguments.h  V8FunctionTemplate.h  V8NativeObject.h  V8NativeObjectHandle.h  V8ObjectTemplateBuilder.h  V8TypeConverter.h
libs/jsRuntime/src/: CodeCache.cc  DelayedWorkerTaskQueue.cc  JSApp.cc  JSContext.cc  JSContextModules.cc  JSModules.cc  JSRuntime.cc  JSUtilites.cc  JSUtilities.cc  NestableQueue.cc  ScriptStartupDataManager.cc  StartupData.cc  TaskRunner.cc  V8ExternalRegistry.cc  V8Jobs.cc  V8Platform.cc  WorkerTaskRunner.cc
libs/jsRuntime/src/CppBridge/: V8Arguments.cc  V8FunctionTemplate.cc  V8NativeObject.cc  V8ObjectTemplateBuilder.cc  V8TypeConverter.cc
libs/jsRuntime/tests/: CodeCacheTest.cc  DelayedWorkerTaskQueueDeathTest.cc  DelayedWorkerTaskQueueTest.cc  ForegroundTaskRunnerDeathTest.cc  ForegroundTaskRunnerTest.cc  JSContextTest.cc  JSModulesTest.cc  JSRuntimeDeathTest.cc  JSRuntimeTest.cc  JSUtilitiesTest.cc  NestableQueueTest.cc  ScriptStartupDataManagerTest.cc  TaskRunnerDeathTest.cc  TaskRunnerTest.cc  V8JobsDeathTest.cc  V8JobsTest.cc  V8PlatformDeathTest.cc  V8PlatformInitTest.cc  V8PlatformRuntimeTest.cc  V8PlatformTest.cc  V8PlatformWorkerTest.cc  V8StartupICUDataTest.cc  V8TestFixture.cc  V8TestFixture.h  WorkerTaskRunnerDeathTest.cc  WorkerTaskRunnerTest.cc
libs/jsRuntime/tests/CppBridge/: V8ArgumentsTest.cc  V8FunctionTemplateTest.cc  V8NativeObjectTest.cc  V8ObjectTemplateTest.cc  V8TypeConverterTest.cc
libs/jsRuntime/testsCore/: JSAppTest.cc  JSContextDeathTest.cc  JSContextTest.cc  JSRuntimeDeathTest.cc  JSRuntimeTest.cc  V8JobsDeathTest.cc  V8JobsTest.cc  V8PlatformInitDeathTest.cc  V8PlatformInitFixture.cc  V8PlatformInitFixture.h
scripts/: functions  iniitial-clone.bat  iniitial-clone.sh  install-v8-dstribution.sh  run-test.sh
src/: hello.cc
src/libs/application/: BUILD
src/libs/application/include/: Application.h  BasePlatform.h
src/libs/application/src/: Application.cc
src/libs/core/: BUILD
src/libs/jsRuntime/: BUILD
src/libs/jsRuntime/include/: CodeCache.h  ForegroundTaskRunner.h  IJSContextProvider.h  IJSPlatformRuntimeProvider.h  IJSRuntimeProvider.h  IJSSnapshotCreator.h  IJSSnapshotProvider.h  ISnapshotHandleCloser.h  ISnapshotObject.h  JSApp.h  JSApp.hpp  JSAppCreatorRegistry.h  JSAppSnapData.h  JSContext.h  JSContextCreationHelper.h  JSContextCreator.h  JSContextModules.h  JSContextSnapData.h  JSModuleAttributesInfo.h  JSModuleInfo.h  JSRuntime.h  JSRuntimeSnapData.h  JSRuntimeVersion.h  JSSnapshotCreator.h  JSSnapshotCreator.hpp  JSUtilities.h  NestableQueue.h  V8AppPlatform.h  V8AppSnapshotAsset.h  V8AppSnapshotCreator.h  V8AppSnapshotProvider.h  V8ContextProvider.h  V8ExternalRegistry.h  V8Jobs.h  V8Platform.h  V8RuntimeProvider.h  V8SnapshotCreator.h  V8SnapshotProvider.h  V8Types.h  WorkerTaskRunner.h
src/libs/jsRuntime/src/: CodeCache.cc  EmbeddedScripts.cc  ForegroundTaskRunner.cc  IJSSnapshotCreator.cc  IJSSnapshotProvider.cc  JSApp.cc  JSAppCreatorRegistry.cc  JSContext.cc  JSContextCreationHelper.cc  JSContextCreator.cc  JSContextModules.cc  JSModuleAttributesInfo.cc  JSModuleInfo.cc  JSRuntime.cc  JSSnapshotCreator.cc  JSUtilities.cc  NestableQueue.cc  StartupData.cc  V8AppPlatform.cc  V8AppSnapshotCreator.cc  V8AppSnapshotProvider.cc  V8ContextProvider.cc  V8ExternalRegistry.cc  V8Jobs.cc  V8Platform.cc  V8RuntimeProvider.cc  V8SnapshotCreator.cc  V8SnapshotProvider.cc  WorkerTaskRunner.cc
src/testing/: BUILD  TestSnapshotCreator.h  TestSnapshotProvider.cc  TestSnapshotProvider.h  V8Fixture.cc  V8Fixture.h  cppgc-obj-sample.cc  hello_world.cc  test_main.cc  test_main.h
src/testing/libs/application/: BUILD
src/testing/libs/core/: BUILD
src/testing/libs/jsRuntime/: BUILD
v8/out.gn/android-arm64-debug/: args.gn
v8/out.gn/android-x64-debug/: args.gn
v8/out.gn/ios-x64-debug/: args.gn
v8/out.gn/windows-x64-debug/: args.gn
(+179 files in other folders)
