# Copyright 2020 - 2024 the v8App authors. All right reserved.
# Use of this source code is governed by the MIT license
# that can be found in the LICENSE file.
load("@v8App//:bazel/platform_configs.bzl", "define_platform_config_settings")

platform(
    name = "macos_x86_64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64"
    ]
)
platform(
    name = "macos_arm64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:arm64"
    ]
)
platform(
    name = "ios_x86_64",
    constraint_values = [
        "@platforms//os:ios",
        "@platforms//cpu:x86_64"
    ]
)
platform(
    name = "ios_armv7",
    constraint_values = [
        "@platforms//os:ios",
        "@platforms//cpu:armv74"
    ]
)
platform(
    name = "ios_arm64",
    constraint_values = [
        "@platforms//os:ios",
        "@platforms//cpu:arm64"
    ]
)
platform(
    name = "android_x86_64",
    constraint_values = [
        "@platforms//os:adroid",
        "@platforms//cpu:x86_64"
    ]
)
platform(
    name = "android_armv7",
    constraint_values = [
        "@platforms//os:adroid",
        "@platforms//cpu:armv7"
    ]
)
platform(
    name = "android_arm64",
    constraint_values = [
        "@platforms//os:adroid",
        "@platforms//cpu:arm64"
    ]
)
platform(
    name = "windows_x86_64",
    constraint_values = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64"
    ]
)

define_platform_config_settings()
