# Copyright 2020 The v8App Authors. All rights reserved.
# Use of this source code is governed by a MIT license that can be
# found in the LICENSE file.

import("//build_overrides/build.gni")
import("//v8/gni/v8.gni")

executable("v8App") {
    sources = [
        "hello.cc"
    ]

    cflags = ["-Wall"]
    include_dirs=["."]
    deps = [
        "//v8:v8",
        "//v8:v8_libbase ",
        "//v8:v8_libplatform",
    ]
}