###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(
    name = "v8app",
)

bazel_dep(name = "bazel_skylib", version = "1.6.1")
bazel_dep(name = "rules_apple", version = "3.5.1", repo_name = "build_bazel_rules_apple")
bazel_dep(name = "platforms", version = "0.0.10")

bazel_dep(name = "googletest", version = "1.14.0")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "com_mariusbancila_stduuid",
    strip_prefix = "stduuid-1.2.3",
    build_file_content = """
cc_library(
    name = "uuid",
    hdrs = glob(["include/*.h"]),
    strip_include_prefix ="include",
    visibility = ["//visibility:public"],
    defines = [
        "UUID_SYSTEM_GENERATOR"
    ],
    include_prefix = "uuid",
    linkstatic = 1
)
""",
    sha256="0f867768ce55f2d8fa361be82f87f0ea5e51438bc47ca30cd92c9fd8b014e84e",
    urls = ["https://github.com/mariusbancila/stduuid/archive/v1.2.3.zip"],
)
